force-app/main/default/objects/Convsta_Informations_Personnelles__c/Convsta_Informations_Personnelles__c.object-meta.xml
<CustomObject>
    <description>Informations personnelles de l&apos;étudiant - A saisir pour sa demande d&apos;expérience professionnelle.</description>
    <label>Informations Personnelles</label>
    <nameField>
        <displayFormat>IP-{00000}</displayFormat>
        <label>Convsta Informations Personnelles</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Informations Personnelles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>