force-app/main/default/objects/Convsta_Informations_Personnelles__c/fields/Code_Etudiant__c.field-meta.xml
<CustomField>
    <fullName>Code_Etudiant__c</fullName>
    <description>Le code attribué à l&apos;étudiant par l&apos;emlyon</description>
    <label>Code Etudiant</label>
    <length>40</length>
    <type>Text</type>
</CustomField>