force-app/main/default/objects/Convsta_Informations_Personnelles__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Adresse email de l&apos;étudiant</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>