force-app/main/default/objects/Convsta_Informations_Personnelles__c/fields/is_soumis_etudiant__c.field-meta.xml
<CustomField>
    <fullName>is_soumis_etudiant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is_soumis_etudiant</label>
    <type>Checkbox</type>
</CustomField>