force-app/main/default/objects/Convsta_Informations_Personnelles__c/fields/Nom__c.field-meta.xml
<CustomField>
    <fullName>Nom__c</fullName>
    <description>Le nom de l&apos;étudiant</description>
    <label>Nom</label>
    <length>80</length>
    <type>Text</type>
</CustomField>