force-app/main/default/objects/Convsta_Informations_Personnelles__c/fields/Prenom__c.field-meta.xml
<CustomField>
    <fullName>Prenom__c</fullName>
    <description>Le prénom de l&apos;étudiant</description>
    <label>Prénom</label>
    <length>80</length>
    <type>Text</type>
</CustomField>