force-app/main/default/objects/Convsta_Informations_Personnelles__c/fields/Programme__c.field-meta.xml
<CustomField>
    <fullName>Programme__c</fullName>
    <description>Le programme d&apos;études suivi par l&apos;étudiant</description>
    <label>Programme</label>
    <length>80</length>
    <type>Text</type>
</CustomField>