force-app/main/default/objects/Convsta_Informations_Personnelles__c/fields/Telephone__c.field-meta.xml
<CustomField>
    <fullName>Telephone__c</fullName>
    <description>Le numéro de téléphone personnel de l&apos;étudiant</description>
    <inlineHelpText>Numéro de téléphone personnel de l&apos;étudiant</inlineHelpText>
    <label>Téléphone</label>
    <type>Phone</type>
</CustomField>